<resources>
    <string name="app_name">DatingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">Обо мне:</string>
    <string name="about_me_text">Текст о том о сем. Любая информация, которую пользователь пожелает оставить. Желательно сделать чтобы окошко увеличивалось и уменьшалось автоматически в зависимости от величины текста. </string>
    <string name="my_interests_text">My hobby is reading. I like to read books in my free time. I like funny stories, fairy tales, and poems for children. I like to read fairy tales very much. My favourite fairy tale is by Hans Christian Andersen. I have read it several times. Gerda is my favourite fairy-tale character. I usually read in the evening before sleep. I also like to read in a garden or in a park, sitting on a bench. Recently I began to read short stories in English. It is difficult for me to read in English. But I want to learn English, and I want to read books in English.</string>
    <string name="tests">Тесты</string>
    <string name="chats">Чаты</string>
    <string name="profile">Личный кабинет</string>
    <string name="name">Иван</string>
    <string name="years">%1$d лет</string>
    <string name="star_sign">зодиак</string>
    <string name="gemini">близнецы</string>
    <string name="sport_title">спорт:</string>
    <string name="sport_body">теннис, футбол, волейбол, плаванье, гольф, скалолазанье</string>
    <string name="diet_title">диета:</string>
    <string name="diet_body">вегетарианец</string>
    <string name="edit_button">Дополнить анкету</string>
    <string name="welcome_text_view">Приветствуем \n вас!</string>
    <string name="you_launched_app_text_view">Вы запустили \n приложение по выбору \n идеального партнера</string>
    <string name="next_button_text">Далее</string>

    <plurals name="years_plural">
        <item quantity="one">%d год</item>
        <item quantity="two">%d года</item>
        <item quantity="many">%d лет</item>
        <item quantity="other">%d года</item>
    </plurals>

</resources>




