<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->


        <ImageView
            android:id="@+id/profile_imageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/transparent_view"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:alpha="0.2"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/profile_imageView"
            app:layout_constraintEnd_toEndOf="@id/profile_imageView"
            app:layout_constraintStart_toStartOf="parent">


        </View>

        <TextView
            android:id="@+id/name_detail_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/profile_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/transparent_view" />

        <TextView
            android:id="@+id/years_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/years"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/transparent_view"
            app:layout_constraintEnd_toStartOf="@+id/edit_imageView"
            app:layout_constraintStart_toEndOf="@+id/name_detail_textView"
            app:layout_constraintTop_toTopOf="@+id/transparent_view" />


        <ImageView
            android:id="@+id/edit_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/profile_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/transparent_view"
            app:tint="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@+id/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transparent_view">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_me_title_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/about_me"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/about_me_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/about_me_text"
                    android:textColor="@color/body_text_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/zodiac_title_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:alpha="0.6"
                    android:text="@string/star_sign"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/zodiac_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="18dp"
                    android:text="@string/gemini"
                    android:textColor="@color/interests_text_color"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_hide" />


                <TextView
                    android:id="@+id/sport_title_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:alpha="0.6"
                    android:text="@string/sport_title"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/sport_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sport_body"
                    android:textColor="@color/interests_text_color"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/diet_title_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:alpha="0.6"
                    android:text="@string/diet_title"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/diet_tTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/diet_body"
                    android:textColor="@color/interests_text_color"
                    android:textSize="20sp" />


            </LinearLayout>


        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/custom_button"
            android:text="@string/edit_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>