<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->


        <ImageView
            android:id="@+id/profile_imageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/transparent_view"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:alpha="0.2"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/profile_imageView"
            app:layout_constraintEnd_toEndOf="@id/profile_imageView"
            app:layout_constraintStart_toStartOf="parent">


        </View>

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Ivan Petrov"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/profile_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/transparent_view" />

        <ImageView
            android:id="@+id/circle1_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/transparent_view"
            app:layout_constraintEnd_toStartOf="@+id/circle2_imageView"
            app:layout_constraintStart_toEndOf="@+id/profile_imageView"
            app:layout_constraintTop_toTopOf="@+id/transparent_view"
            tools:layout_editor_absoluteY="93dp" />

        <ImageView
            android:id="@+id/circle2_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/transparent_view"
            app:layout_constraintEnd_toStartOf="@+id/circle3_imageView"
            app:layout_constraintStart_toEndOf="@+id/circle1_imageView"
            app:layout_constraintTop_toTopOf="@+id/transparent_view" />


        <ImageView
            android:id="@+id/circle3_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/transparent_view"
            app:layout_constraintEnd_toStartOf="@+id/transparent_view"
            app:layout_constraintStart_toEndOf="@+id/circle2_imageView"
            app:layout_constraintTop_toTopOf="@+id/transparent_view"
            tools:layout_editor_absoluteY="93dp" />

        <ImageView
            android:id="@+id/camera_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@+id/profile_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/transparent_view"
            app:tint="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/chats_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transparent_view">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_me_title_textView"
                    style="@style/TextAppearance.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_me" />

                <TextView
                    android:id="@+id/about_me_textView"
                    style="@style/TextAppearance.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/about_me_text" />

                <TextView
                    android:id="@+id/interests_title_textView"
                    style="@style/TextAppearance.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="My interests:" />

                <TextView
                    android:id="@+id/interests_textView"
                    style="@style/TextAppearance.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/my_interests_text" />
            </LinearLayout>


        </ScrollView>


        <Button
            android:id="@+id/tests_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/tests"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chats_button"
            android:background="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/chats_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/chats"
            android:background="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profile_button"
            app:layout_constraintStart_toEndOf="@+id/tests_button" />


        <Button
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/profile"
            android:background="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chats_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

